Closed
Bug 400790
Opened 18 years ago
Closed 17 years ago
"ASSERTION: Should not be called" with xul:listbox, xul:listitem
Categories
(Core :: XUL, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: jruderman, Assigned: martijn.martijn)
References
Details
(Keywords: assertion, testcase)
Attachments
(2 files)
|
529 bytes,
application/vnd.mozilla.xul+xml
|
Details | |
|
1.83 KB,
patch
|
neil
:
review+
neil
:
superreview+
damons
:
approval1.9+
|
Details | Diff | Splinter Review |
Loading the testcase triggers:
###!!! ASSERTION: Should not be called: 'Not Reached', file /Users/jruderman/trunk/mozilla/layout/xul/base/src/grid/nsGridLayout2.h, line 78
Comment 1•18 years ago
|
||
Ah, another of these "should not normally be called" assertions ;-)
sr=me to remove the assertion, if everyone else agrees :-)
Comment 2•17 years ago
|
||
confirmed on windows debug build ###!!! ASSERTION: Should not be called: 'Not Reached', file c:\work\mozilla\builds\1.9.0-trace-malloc\mozilla\layout\xul\base\src\grid\nsGridLayout2.h, line 78
I see this Assertion also when i open the Places Organizer (Bookmarks -> Organize Bookmarks)
OS: Mac OS X → All
| Assignee | ||
Comment 3•17 years ago
|
||
So it's ok to remove the assertion, right?
Attachment #290414 -
Flags: superreview?(bzbarsky)
Attachment #290414 -
Flags: review?(neil)
Comment 4•17 years ago
|
||
Comment on attachment 290414 [details] [diff] [review]
removes assertion
I think Neil can r+sr this one...
Attachment #290414 -
Flags: superreview?(bzbarsky) → superreview?(neil)
Updated•17 years ago
|
Attachment #290414 -
Flags: superreview?(neil)
Attachment #290414 -
Flags: superreview+
Attachment #290414 -
Flags: review?(neil)
Attachment #290414 -
Flags: review+
| Assignee | ||
Updated•17 years ago
|
Attachment #290414 -
Flags: approval1.9?
Updated•17 years ago
|
Assignee: nobody → martijn.martijn
Updated•17 years ago
|
Attachment #290414 -
Flags: approval1.9? → approval1.9+
| Assignee | ||
Comment 5•17 years ago
|
||
Checking in nsGridLayout2.h;
/cvsroot/mozilla/layout/xul/base/src/grid/nsGridLayout2.h,v <-- nsGridLayout2.
h
new revision: 1.15; previous revision: 1.14
done
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Comment 6•17 years ago
|
||
Could this have regressed bug 406729?
| Assignee | ||
Comment 7•17 years ago
|
||
Well, I just removed an assertion.
Component: XP Toolkit/Widgets: XUL → XUL
QA Contact: xptoolkit.xul → xptoolkit.widgets
You need to log in
before you can comment on or make changes to this bug.
Description
•