removal of Bug 400790 - ASSERTION: Should not be called with xul:listbox, xul:listitem, r+sr=neil, a=dsicore